Tiny images. Improved layout / vertical scrollbar position. Fixed navmenu button colour in some browsers.

--- a/site/pages/page.scss
+++ b/site/pages/page.scss
@@ -2,8 +2,8 @@
 
 .page-header {
   .title {
-    margin-top: -5px;
-    margin-bottom: 5px;
+    margin-top: -4px;
+    margin-bottom: 6px;
   }
   .description {
     margin-left: 10px;
