--- a/site/site.scss
+++ b/site/site.scss
@@ -33,15 +33,18 @@ h6 { font-size: .75em; }
 h1, h2, h3 {
   line-height: 1.2;
   color: $color--header-heavy;
+  font-weight: normal;
 }
 h4, h5, h6 {
   line-height: 1.6;
   color: $color--header-light;
+  font-weight: normal;
 }
 
 .site-details {
   background: $color--sidebar-background;
   position: absolute;
+  z-index: 2;
   left: 0;
   width: $size--sidebar-width;
   height: 100%;
@@ -107,12 +110,12 @@ h4, h5, h6 {
       background:  $color--nav-bg_hover;
       // ... generated by http://www.cssmatic.com/ 
       //     Apologies for the gradients!
-      background: -moz-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(227,253,226,1) 100%);
+      background: -moz-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(227,253,226,1) 100%);
       background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(241,255,240,0)), color-stop(0%, rgba(246,41,12,0)), color-stop(100%, rgba(227,253,226,1)));
-      background: -webkit-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(227,253,226,1) 100%);
-      background: -o-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(227,253,226,1) 100%);
-      background: -ms-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(227,253,226,1) 100%);
-      background: linear-gradient(135deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(227,253,226,1) 100%);
+      background: -webkit-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(227,253,226,1) 100%);
+      background: -o-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(227,253,226,1) 100%);
+      background: -ms-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(227,253,226,1) 100%);
+      background: linear-gradient(135deg, rgba(241,255,240,0) 0%, rgba(227,253,226,1) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1fff0', endColorstr='#e3fde2', GradientType=1 );
     }
   }
@@ -123,12 +126,12 @@ h4, h5, h6 {
     // ... generated by http://www.cssmatic.com/ 
     //     Apologies for the gradients!
     background: rgba(241,255,240,0);
-    background: -moz-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(187,218,238,0.07) 100%);
+    background: -moz-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(187,218,238,0.07) 100%);
     background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(241,255,240,0)), color-stop(0%, rgba(246,41,12,0)), color-stop(100%, rgba(187,218,238,0.07)));
-    background: -webkit-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(187,218,238,0.07) 100%);
-    background: -o-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(187,218,238,0.07) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(187,218,238,0.07) 100%);
-    background: linear-gradient(135deg, rgba(241,255,240,0) 0%, rgba(246,41,12,0) 0%, rgba(187,218,238,0.07) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(187,218,238,0.07) 100%);
+    background: -o-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(187,218,238,0.07) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(241,255,240,0) 0%, rgba(187,218,238,0.07) 100%);
+    background: linear-gradient(135deg, rgba(241,255,240,0) 0%, rgba(187,218,238,0.07) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1fff0', endColorstr='#bbdaee', GradientType=1 );
   }
 }
@@ -142,14 +145,17 @@ h4, h5, h6 {
   }
 }
 
-.body-content {
+.body-content-wrapper {
   position: absolute;
-  left: $size--sidebar-width;
+  padding-left: $size--sidebar-width;
+  min-width: 100%;
   height: 100%;
   overflow: auto;
+}
 
+.body-content {
   padding: $size--content-padding;
-  padding-top: 33px; // (Sorry... Lines up with the header in the side bar. Should do this better... )
+  padding-top: 34px; // (Sorry... Lines up with the header in the side bar. Should do this better... )
   max-width: 650px + (2*$size--content-padding);
   min-width: 500px;
 }
